--- a/sala-de-juegos/src/app/pages/login/login.component.css
+++ b/sala-de-juegos/src/app/pages/login/login.component.css
@@ -7,6 +7,7 @@
     align-items: center;
     height: 100vh;
     padding: 20px;
+    animation: fadeInSlideUp 1s ease-out; /* Animación de entrada */
 }
 
 .login-card {
@@ -16,6 +17,7 @@
     width: 100%;
     max-width: 400px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    animation: fadeInSlideUp 1s ease-out; /* Animación de entrada */
 }
 
 .login-title {
@@ -62,6 +64,12 @@ button.login-button:hover {
     background-color: var(--color-boton-hover);
 }
 
+button.login-button:disabled {
+    background-color: #888; /* gris más claro */
+    cursor: not-allowed;
+    opacity: 0.6; /* lo hace más transparente */
+}
+
 .error-message {
     color: var(--color-error);
     font-size: 14px;
@@ -83,3 +91,23 @@ button.login-button:hover {
 .register-link a:hover {
     color: var(--color-boton-hover);
 }
+
+
+/* Para inputs inválidos */
+.invalid-input {
+    border: 1px solid var(--color-error); /* borde rojo */
+}
+
+/* Opcional: una animación para cuando aparece el error */
+.error-message {
+    color: var(--color-error);
+    font-size: 14px;
+    margin-top: 5px;
+    animation: fadeIn 0.3s ease-in;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
