--- a/sala-de-juegos/src/app/pages/register/register.component.css
+++ b/sala-de-juegos/src/app/pages/register/register.component.css
@@ -7,6 +7,7 @@
     align-items: center;
     height: 100vh;
     padding: 20px;
+    animation: fadeInSlideUp 1s ease-out; /* Animación de entrada */
 }
 
 .register-card {
@@ -16,6 +17,7 @@
     width: 100%;
     max-width: 450px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    animation: fadeInSlideUp 1s ease-out; /* Animación de entrada */
 }
 
 .register-title {
