--- a/sala-de-juegos/src/app/pages/register/register.component.css
+++ b/sala-de-juegos/src/app/pages/register/register.component.css
@@ -64,6 +64,12 @@ button.register-button:hover {
     background-color: var(--color-boton-hover);
 }
 
+button.register-button:disabled {
+    background-color: #888; /* gris más claro */
+    cursor: not-allowed;
+    opacity: 0.6; /* lo hace más transparente */
+}
+
 .login-link {
     text-align: center;
     margin-top: 15px;
@@ -77,4 +83,12 @@ button.register-button:hover {
 
 .login-link a:hover {
     color: var(--color-boton-hover);
+}
+
+.error-message {
+    color: var(--color-error);
+    font-size: 14px;
+    text-align: center;
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
