--- a/sala-de-juegos/src/app/components/nav-bar/nav-bar.component.html
+++ b/sala-de-juegos/src/app/components/nav-bar/nav-bar.component.html
@@ -4,10 +4,10 @@
 <div class="navbar-container">
     <nav class="navbar">
         <div class="navbar-brand">
-            <img src="/assets/images/logoNav.png" alt="Logo" class="navbar-logo">
+            <img src="assets/images/logoNav.png" alt="Logo" class="navbar-logo">
             <span class="navbar-title">LucaGames</span>
         </div>
-        
+
         <div class="navbar-links">
             <a routerLink="/home" routerLinkActive="active-link">Home</a>
             <a routerLink="/quien-soy" routerLinkActive="active-link">Quién Soy</a>
