--- a/sala-de-juegos/src/app/pages/register/register.component.css
+++ b/sala-de-juegos/src/app/pages/register/register.component.css
@@ -4,9 +4,10 @@
 .register-container {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     height: 100vh;
     padding: 20px;
+    padding-top: 50px;
     animation: fadeInSlideUp 1s ease-out; /* Animación de entrada */
 }
 
