Haciendo sala de chat, me sigue apareciendo username empty en supabase

--- a/sala-de-juegos/src/app/components/nav-bar/nav-bar.component.html
+++ b/sala-de-juegos/src/app/components/nav-bar/nav-bar.component.html
@@ -11,6 +11,7 @@
         <div class="navbar-links">
             <a routerLink="/home" routerLinkActive="active-link">Home</a>
             <a routerLink="/quien-soy" routerLinkActive="active-link">Quién Soy</a>
+            <a routerLink="/chat" routerLinkActive="active-link">Chat</a>
             <!-- <a routerLink="/ag" routerLinkActive="active-link">Chat</a> -->
             <!-- Mostrar solo si NO está logueado -->
             <ng-container *ngIf="!usuarioLogueado">
