Empezando a diseñar la estructura para los juegos

--- a/sala-de-juegos/src/app/components/nav-bar/nav-bar.component.html
+++ b/sala-de-juegos/src/app/components/nav-bar/nav-bar.component.html
@@ -11,8 +11,10 @@
         <div class="navbar-links">
             <a routerLink="/home" routerLinkActive="active-link">Home</a>
             <a routerLink="/quien-soy" routerLinkActive="active-link">Quién Soy</a>
-            <a routerLink="/chat" routerLinkActive="active-link">Chat</a>
-            <!-- <a routerLink="/ag" routerLinkActive="active-link">Chat</a> -->
+            
+            <!-- Mostrar solo si está logueado -->
+            <a *ngIf="usuarioLogueado" routerLink="/chat" routerLinkActive="active-link">Chat</a>
+
             <!-- Mostrar solo si NO está logueado -->
             <ng-container *ngIf="!usuarioLogueado">
                 <a routerLink="/login" routerLinkActive="active-link" class="signup-link">Login</a>
