--- a/sala-de-juegos/src/app/pages/home/home.component.html
+++ b/sala-de-juegos/src/app/pages/home/home.component.html
@@ -12,19 +12,19 @@
             <div class="juego-card">
                 <h3>Ahorcado</h3>
                 <p>Adiviná la palabra antes de que sea demasiado tarde.</p>
-                <button class="jugar-button">Jugar</button>
+                <button class="jugar-button" (click)="jugar('ahorcado')">Jugar</button>
             </div>
 
             <div class="juego-card">
                 <h3>Mayor o Menor</h3>
                 <p>¿Cuál número sigue? Adiviná si es mayor o menor.</p>
-                <button class="jugar-button">Jugar</button>
+                <button class="jugar-button " (click)="jugar('mayor-menor')">Jugar</button>
             </div>
 
             <div class="juego-card">
                 <h3>Preguntados</h3>
                 <p>Responde preguntas de cultura general. ¡Desafiá tu mente!</p>
-                <button class="jugar-button">Jugar</button>
+                <button class="jugar-button" (click)="jugar('preguntados')">Jugar</button>
             </div>
 
             
